--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
 		"@reduxjs/toolkit": "^2.8.2",
 		"@tanstack/react-query": "^5.85.5",
 		"formik": "^2.4.6",
-		"react": "19.0.0",
+		"react": "^18.3.1",
 		"react-beautiful-dnd": "^13.1.1",
-		"react-dom": "19.0.0",
+		"react-dom": "^18.3.1",
 		"react-redux": "^9.2.0",
 		"react-router-dom": "^6.22.3",
 		"redux": "^5.0.1",
